--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -20,9 +20,27 @@
 
     <div class="block lg:hidden">
       <button (click)='toggleMobileMenu()' class="flex items-center px-3 py-2 border rounded text-black border-black hover:text-green-500">
-        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+        <div [hidden] = "!showMobileMenu">
+            <svg
+            class="fill-current h-3 w-3"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+          </svg>
+        </div>
+        <div [hidden] = "showMobileMenu">
+            <svg
+            class="fill-current h-3 w-3"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z" />
+          </svg>
+        </div>
+
       </button>
-      <div id="mobileMenu" [hidden] = "showMobileMenu">
+      <div id="mobileMenu" [hidden] = "showMobileMenu" class="absolute">
         <menu>
           <li>        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
             About me
@@ -41,42 +59,6 @@
 
     </div>
 
-
-
-    <div class="-mr-2 -my-2 md:hidden">
-      <button type="button" (click)="toggleMobileMenu()"
-        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-          aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-    </div>
-    <div [@openClose]="openCloseTrigger"
-      class="absolute z-30 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-      <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
-  
-        <div class="flex items-center justify-between">
-          <button (click)="toggleMobileMenu()" type="button"
-            class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-              aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-        <div class="py-6 px-5">
-          <div class="grid gap-4">
-            <a routerLink="/" class="text-base font-medium text-gray-900 hover:text-gray-700">
-              Home
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    
 <!-- Desktop menu -->
 
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto max-sm:hidden">
