--- a/src/app/app.component.heroBanner.html
+++ b/src/app/app.component.heroBanner.html
@@ -2,7 +2,7 @@
     <div class="flex h-screen items-center justify-center bg-white p-5">
       <div class="grid md:grid-cols-2 grid-cols-1 items-center gap-10 md:px-10">
         <div>
-          <h1 class="mb-2 text-3xl font-bold text-black animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5"><span class="text-green-500">Hi, </span> I'm a Full Stack Developer</h1>
+          <h1 class="mb-2 text-3xl font-bold text-black animate-typing flex-wrap border-r-4 border-r-white pr-5"><span class="text-green-500">Hi, </span>I'm a Full Stack Developer</h1>
           <p class="mb-6 text-black">I like building things, fixing things and finding solutions to problems. Mostly I do this in C#, .Net and Azure but I've also done in it in Powershell, Python, and JavaScript.</p>
           <div class="flex justify-center space-x-5">
           </div>
