--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-white p-6">
+<nav class="flex items-center justify-between flex-wrap bg-white p-6 bg-white rounded-lg shadow-md dark:bg-gray-900 m-4">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
       <img class="px-3" src="/assets/toolbox.png" width="50" height="50" alt="githubLogo">
       <span class="font-semibold text-xl tracking-tight text-black">JM</span>
