--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -42,9 +42,9 @@
       </button>
       <div id="mobileMenu" [hidden] = "showMobileMenu" class="absolute">
         <menu>
-          <li>        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
-            About me
-          </a></li>
+          <li>
+            <a (click) = 'navigateToAboutMe()' class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">About me</a>
+          </li>
           <li>        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
             Projects
           </a></li>
@@ -64,7 +64,7 @@
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto max-sm:hidden">
   
       <div class="text-sm lg:flex-grow flex items-center justify-center h-16 font-semibold text-xl">
-        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
+        <a routerLink = "/aboutMe" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
           About me
         </a>
         <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
