--- a/src/app/app.component.footer.html
+++ b/src/app/app.component.footer.html
@@ -1,10 +1,10 @@
-<footer class="bg-white rounded-lg shadow-md dark:bg-gray-900 m-4">
+<footer class="bg-white rounded-lg shadow-md m-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
 
             <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
                 <img src="/assets/toolbox.png" class="h-8" alt="site Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">John Moir</span>
+                <span class="self-center text-2xl font-semibold whitespace-nowrap ">John Moir</span>
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-black sm:mb-0">
                 <li>
