--- a/src/app/app.component.aboutMe.html
+++ b/src/app/app.component.aboutMe.html
@@ -1,12 +1,35 @@
-<div>
-    <div class="flex h-screen items-center justify-center bg-white p-5">
-      <div class="grid md:grid-cols-2 grid-cols-1 items-center gap-10 md:px-10">
-        <div>
-          <h1 class="mb-2 text-3xl font-bold text-black animate-typing flex-wrap border-r-4 border-r-white pr-5"><span class="text-green-500">About me</span></h1>
-          <p class="mb-6 text-black">I like building things, fixing things and finding solutions to problems. Mostly I do this in C#, .Net and Azure but I've also done in it in Powershell, Python, and JavaScript.</p>
-          <div class="flex justify-center space-x-5">
+<div class="bg-white rounded-lg shadow-md m-4 p-6">
+    <div class="lg:inline-grid block grid-cols-2 gap-10 ">
+          <div class="justify-center inline-flex">
+              <img src="/assets/githubProfilePic.png" alt="" class="rounded-md shadow-xl justify-center" />
           </div>
-        </div>
-      </div>
+          <div>
+              <h3 class="text-green-500 font-bold pb-px">Section Header</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
     </div>
-  </div>
+</div>
+
+<div class="bg-white rounded-lg shadow-md m-4 p-6">
+    <div class="lg:inline-grid block grid-cols-2 gap-10 ">
+          <div class="justify-center inline-flex lg:order-last">
+              <img src="/assets/githubProfilePic.png" alt="" class="rounded-md shadow-xl justify-center" />
+          </div>
+          <div>
+              <h3 class="text-green-500 font-bold pb-px">Section Header</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+    </div>
+</div>
+
+<div class="bg-white rounded-lg shadow-md m-4 p-6">
+    <div class="lg:inline-grid block grid-cols-2 gap-10 ">
+          <div class="justify-center inline-flex">
+              <img src="/assets/githubProfilePic.png" alt="" class="rounded-md shadow-xl justify-center" />
+          </div>
+          <div>
+              <h3 class="text-green-500 font-bold pb-px">Section Header</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+    </div>
+</div>
