--- a/src/app/app.component.footer.html
+++ b/src/app/app.component.footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-white rounded-lg shadow-md m-4">
-    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+    <div class="w-full mx-auto p-6 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
 
             <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
