--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -47,7 +47,7 @@
       <div id="mobileMenu" [hidden] = "showMobileMenu" class="absolute">
         <menu>
           <li>
-            <a (click) = 'navigateToAboutMe()' class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">About me</a>
+            <a (click) = 'toggleMobileMenu()' routerLink = "/aboutMe" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">About me</a>
           </li>
           <li>        <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">
             Projects
