--- a/src/app/app.component.heroBanner.html
+++ b/src/app/app.component.heroBanner.html
@@ -1,4 +1,4 @@
-<div>
+<div class="bg-white rounded-lg shadow-md m-4 p-6">
     <div class="flex h-screen items-center justify-center bg-white p-5">
       <div class="grid md:grid-cols-2 grid-cols-1 items-center gap-10 md:px-10">
         <div>
