--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -23,8 +23,8 @@
 
 
     <div class="block lg:hidden">
-      <button (click)='toggleMobileMenu()' class="flex items-center px-3 py-2 border rounded text-black border-black hover:text-green-500">
-        <div [hidden] = "!showMobileMenu">
+      <button #menuButton (click)='toggleMobileMenu()' class="flex items-center px-3 py-2 border rounded text-black border-black hover:text-green-500">
+        <div [hidden] = "!hideMobileMenu">
             <svg
             class="fill-current h-3 w-3"
             viewBox="0 0 20 20"
@@ -33,7 +33,7 @@
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
           </svg>
         </div>
-        <div [hidden] = "showMobileMenu">
+        <div [hidden] = "hideMobileMenu">
             <svg
             class="fill-current h-3 w-3"
             viewBox="0 0 20 20"
@@ -44,7 +44,7 @@
         </div>
 
       </button>
-      <div id="mobileMenu" [hidden] = "showMobileMenu" class="absolute">
+      <div #mobileMenu [hidden] = "hideMobileMenu" class="absolute bg-white rounded-lg shadow-md p-6 right-2">
         <menu>
           <li>
             <a (click) = 'toggleMobileMenu()' routerLink = "/aboutMe" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-green-500 mr-4">About me</a>
