--- a/src/app/app.component.header.html
+++ b/src/app/app.component.header.html
@@ -24,8 +24,9 @@
 
     <div class="block lg:hidden">
       <button #menuButton (click)='toggleMobileMenu()' class="flex items-center px-3 py-2 border rounded text-black border-black hover:text-green-500">
-        <div [hidden] = "!hideMobileMenu">
+        <div  [hidden] = "!hideMobileMenu">
             <svg
+            #menuIcon
             class="fill-current h-3 w-3"
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg"
