--- a/src/app/app.component.footer.html
+++ b/src/app/app.component.footer.html
@@ -8,10 +8,10 @@
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-black sm:mb-0">
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">About me</a>
+                    <a routerLink = "/aboutMe" class="hover:underline me-4 md:me-6">About me</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Projects</a>
+                    <a routerLink = "/projects" class="hover:underline me-4 md:me-6">Projects</a>
                 </li>
                 <li>
                     <a href="#" class="hover:underline me-4 md:me-6">Resume</a>
